openshift/01-rhokp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhokp-server
  namespace: rhokp-server
  labels:
    app: rhokp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhokp
  template:
    metadata:
      labels:
        app: rhokp
    spec:
      serviceAccountName: rhokp-server
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: rhokp
        image: registry.redhat.io/offline-knowledge-portal/rhokp-rhel9:latest
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: solr
          containerPort: 8983
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: "2"
            memory: 4Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rhokp
  name: rhokp-server
  namespace: rhokp-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: solr
    port: 8983
    protocol: TCP
    targetPort: 8983
  selector:
    app: rhokp
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: rhokp
  name: rhokp-server
  namespace: rhokp-server
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rhokp-server
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
