openshift/02-rhokp-mcp-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhokp-mcp-server
  namespace: rhokp-server
  labels:
    app: rhokp-mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhokp-mcp
  template:
    metadata:
      labels:
        app: rhokp-mcp
    spec:
      serviceAccountName: rhokp-mcp-server
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: rhokp-mcp
        image: quay.io/danclark/okp-mcp:latest
        #image: quay.io/redhat-services-prod/rhel-lightspeed-tenant/linux-mcp-server:latest  # Might be the new image but keeps crashing
        ports:
        - name: mcp
          containerPort: 8000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rhokp-mcp
  name: rhokp-mcp
  namespace: rhokp-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: rhokp-mcp
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: rhokp-mcp
  name: rhokp-mcp
  namespace: rhokp-server
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: rhokp-mcp
    weight: 100
  wildcardPolicy: None
