openshift/rhokp-mcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhokp-server
  namespace: rhokp-server
  labels:
    app: rhokp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhokp-app
  template:
    metadata:
      labels:
        app: rhokp-app
    spec:
      serviceAccountName: rhokp-server
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: rhokp-mcp
        image: quay.io/danclark/okp-mcp:latest
        #image: quay.io/redhat-user-workloads/rhel-lightspeed-tenant/okp-mcp:latest   # No longer available. Moved??
        ports:
        - name: solr
          containerPort: 8983
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      - name: rhokp
        image: registry.redhat.io/offline-knowledge-portal/rhokp-rhel9:latest
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        #volumeMounts:
        #- mountPath: /opt/solr/server/solr/portal/data
        #  name: okp-solr-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rhokp-app
  name: rhokp-server
  namespace: rhokp-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rhokp-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rhokp-app
  name: rhokp-mcp
  namespace: rhokp-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: rhokp-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: rhokp-app
  name: rhokp-server
  namespace: rhokp-server
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rhokp-server
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: rhokp-app
  name: rhokp-mcp
  namespace: rhokp-server
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: rhokp-mcp
    weight: 100
  wildcardPolicy: None
#  tls:                           # Can do TLS but need to change how tools connect to it due to SSL
#    termination: edge
#    insecureEdgeTerminationPolicy: Redirect
